UI/UX enhancement of video analysis page and Fix of video processing glitch

--- a/frontend/history.html
+++ b/frontend/history.html
@@ -114,8 +114,9 @@
                     <div class="empty-icon">📂</div>
                     <h3>No History Found</h3>
                     <p>Your recent analysis results will appear here.</p>
-                    <a href="analysis.html" class="btn-primary" style="margin-top: 20px; display: inline-block;">Start
-                        New Analysis</a>
+                    <a href="analysis.html" class="btn-mini-corner">
+                        <i class="fas fa-plus"></i> New Analysis
+                    </a>
                 </div>
 
                 <!-- No Results State -->
