--- a/frontend/video_result.html
+++ b/frontend/video_result.html
@@ -794,9 +794,173 @@
             margin-bottom: 0.25rem;
         }
 
-        .stat-card-compact .stat-label {
-            font-size: 0.8rem;
+        /* ==================== PRINTABLE REPORT STYLES ==================== */
+        .report-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 210mm;
+            /* A4 width */
+            min-height: 297mm;
+            /* A4 height */
+            background: #000;
+            color: #fff;
+            padding: 40px;
+            z-index: -1000;
+            opacity: 0;
+            pointer-events: none;
+            font-family: 'Inter', sans-serif;
         }
+
+        .report-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+            padding-bottom: 20px;
+            margin-bottom: 30px;
+        }
+
+        .report-logo {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .report-logo img {
+            height: 40px;
+        }
+
+        .report-logo span {
+            font-size: 24px;
+            font-weight: 700;
+            letter-spacing: -0.02em;
+        }
+
+        .report-meta {
+            text-align: right;
+            font-size: 12px;
+            color: rgba(255, 255, 255, 0.6);
+        }
+
+        .report-verdict {
+            background: rgba(255, 255, 255, 0.05);
+            border-radius: 16px;
+            padding: 30px;
+            display: flex;
+            align-items: center;
+            gap: 30px;
+            margin-bottom: 30px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .report-verdict-icon {
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 32px;
+            color: #000;
+        }
+
+        .report-verdict-content h2 {
+            font-size: 32px;
+            margin-bottom: 10px;
+        }
+
+        .report-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+            margin-bottom: 30px;
+        }
+
+        .report-card {
+            background: rgba(255, 255, 255, 0.03);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 12px;
+            padding: 20px;
+        }
+
+        .report-card h3 {
+            font-size: 16px;
+            color: rgba(255, 255, 255, 0.7);
+            margin-bottom: 15px;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            padding-bottom: 10px;
+        }
+
+        .report-stats-grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 15px;
+        }
+
+        .report-stat-item {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .report-stat-label {
+            font-size: 12px;
+            color: rgba(255, 255, 255, 0.5);
+            text-transform: uppercase;
+        }
+
+        .report-stat-value {
+            font-size: 20px;
+            font-weight: 700;
+        }
+
+        .report-chart-container {
+            height: 250px;
+            width: 100%;
+            margin-top: 10px;
+        }
+
+        .report-frames {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 10px;
+        }
+
+        .report-frame-item {
+            aspect-ratio: 16/9;
+            background: #111;
+            border-radius: 8px;
+            overflow: hidden;
+            position: relative;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .report-frame-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .report-frame-badge {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            font-size: 8px;
+            padding: 2px 6px;
+            border-radius: 4px;
+            background: rgba(0, 0, 0, 0.7);
+            color: #fff;
+        }
+
+        .report-footer {
+            margin-top: 40px;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            padding-top: 20px;
+            text-align: center;
+            font-size: 10px;
+            color: rgba(255, 255, 255, 0.4);
+        }
+
 
         /* Responsive */
         @media (max-width: 1024px) {
@@ -1276,6 +1440,11 @@
             }
         });
     </script>
+    <!-- Hidden Report Container for PDF Generation -->
+    <div id="reportContainer" class="report-container">
+        <!-- Content injected dynamically -->
+    </div>
+
     <script src="video_result.js"></script>
 </body>
 
