redesigned the loader page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,14 +25,17 @@
     <div id="loader-wrapper">
         <!-- Brutalist Counter -->
         <div class="loader-content brutalist">
-            <div class="counter-wrapper" style="color: #E3F514; opacity: 1; display: block;">
-                <span id="loader-percent">0</span><span class="percent-symbol">%</span>
-            </div>
+            <p id="loader-quote">IN A WORLD WHERE SEEING IS NO LONGER BELIEVING,<br>OUR SYSTEM EXISTS TO <span
+                    class="quote-highlight">PROTECT THE TRUTH</span></p>
 
             <!-- Detection Status (Cycling: ANALYZING → REAL? → FAKE?) -->
             <div class="detection-status" id="detectionStatus">
                 <span class="status-text">ANALYZING...</span>
             </div>
+        </div>
+
+        <div class="counter-wrapper" style="color: #E3F514; opacity: 1; display: block;">
+            <span id="loader-percent">0</span><span class="percent-symbol">%</span>
         </div>
 
         <!-- Meta Information -->
